=== Safari-140 ===

2004-05-14  Chris Blumenberg  <cblu@apple.com>

	Copied headers from WebCore.

        * DOM.subproj/DOMCore.h:
        * DOM.subproj/DOMEvents.h:

2004-05-14  Ken Kocienda  <kocienda@apple.com>

        Reviewed by me

        * Plugins.subproj/WebPluginController.m:
        (-[WebPluginController webPlugInContainerLoadRequest:inFrame:]): Fixed a compile error: undeclared identifier. 
        Looked like a typo.

2004-05-13  Richard Williamson   <rjw@apple.com>

	Backed out mistaken change that I didn't mean to checkin.

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge syncLoadResourceWithURL:customHeaders:postData:finalURL:responseHeaders:statusCode:]):

2004-05-13  Richard Williamson   <rjw@apple.com>

	Updated to reflect new API.

        Reviewed by Chris.

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge setIsSelected:forView:]):
        * WebView.subproj/WebFrame.m:
        (-[WebFrame _reloadForPluginChanges]):

2004-05-13  Chris Blumenberg  <cblu@apple.com>

	Fixed some indenting issues in public headers.

        * Plugins.subproj/WebJavaPlugIn.h:
        * Plugins.subproj/WebPlugin.h:
        * Plugins.subproj/WebScriptObject.h:
        * WebView.subproj/WebEditingDelegate.h:
        * WebView.subproj/WebFrameView.h:
        * WebView.subproj/WebPolicyDelegate.h:
        * WebView.subproj/WebResourceLoadDelegate.h:
        * WebView.subproj/WebView.h:

2004-05-13  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Chris

        Moved -DOMDocument convenience back to private header.
        I mistakenly moved it to the public header earlier today.

        * WebView.subproj/WebView.h: Removed
        * WebView.subproj/WebViewPrivate.h: Re-added

2004-05-13  Richard Williamson   <rjw@apple.com>

	Updated to implementation to reflect new API.  Left old SPI
	in place for compatibility.  Can remove when the Java plug-in
	updates.

        Reviewed by Chris.

        * Plugins.subproj/WebPlugin.h: