@@ -1,3 +1,12 @@
+2004-05-14  Chris Blumenberg  <cblu@apple.com>
+
+	Fixed: <rdar://problem/3655204>: (repro assertion failure and crash loading java applets)
+
+        Reviewed by kocienda.
+
+        * WebCoreSupport.subproj/WebBridge.m:
+        (-[WebBridge pluginViewWithPackage:attributes:baseURL:]): call pluginViewWithArguments: for old Cocoa plug-ins
+
 === Safari-140 ===
 
 2004-05-14  Chris Blumenberg  <cblu@apple.com>
